modules/aws/vpc/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  
  tags = {
    Name    = "tech-test-vpc"
    Client  = "iDentify"
    Project = "identify-tech-test"
  }
}

resource "aws_subnet" "public" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone = "us-west-1b"  # Specify your preferred availability zone

  tags = {
    Name    = "public-subnet"
    Client  = "iDentify"
    Project = "identify-tech-test"
  }
}

resource "aws_subnet" "private" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-west-1b"  # Specify your preferred availability zone

  tags = {
    Name    = "private-subnet"
    Client  = "iDentify"
    Project = "identify-tech-test"
  }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "main-gateway"
    Client  = "iDentify"
    Project = "identify-tech-test"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name    = "public-route-table"
    Client  = "iDentify"
    Project = "identify-tech-test"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "private-route-table"
    Client  = "iDentify"
    Project = "identify-tech-test"
  }
}

resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}
